fix: change docker compose to use method from rafael C

--- a/docker/app-sqlite/docker-compose.yml
+++ b/docker/app-sqlite/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
     driver: bridge
 services:
   app:
-    image: nocobase/nocobase:latest
+    image: nocobase/nocobase:1.0.0-alpha.6
     networks:
       - nocobase
     environment:
