--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,6 @@ jobs:
     - name: Execute remote commands
       run: |
         ssh -o StrictHostKeyChecking=no root@45.77.146.40 << 'EOF'
-          dir
+          cd rantir-cloud-go
+          git pull origin original
         EOF
