--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
         ssh -o StrictHostKeyChecking=no root@45.77.146.40 << 'EOF'
           cd rantir-cloud-go
           git pull origin original
+          yarn nocobase pm2-restart
         EOF
